; ModuleID = '/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_mem.c_tracker_save_sys_files.c'
source_filename = "/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_mem.c_tracker_save_sys_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tracker_save_sys_files() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @tracker_save_groups()
  store i32 %3, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* %1, align 4
  br label %14

7:                                                ; preds = %0
  %8 = call i32 (...) @tracker_save_storages()
  store i32 %8, i32* %2, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = load i32, i32* %2, align 4
  store i32 %11, i32* %1, align 4
  br label %14

12:                                               ; preds = %7
  %13 = call i32 (...) @tracker_save_sync_timestamps()
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %12, %10, %5
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @tracker_save_groups(...) #1

declare dso_local i32 @tracker_save_storages(...) #1

declare dso_local i32 @tracker_save_sync_timestamps(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
